--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,11 +16,12 @@ jobs:
         dotnet: ['2.1', '3.1']
 
     steps:
-#    - uses: aws-actions/configure-aws-credentials@v1
- #     with:
-  #      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-   #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #    aws-region: us-east-2
+    - uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws_session_token: ${{ secrets.AWS.SESSION.TOKEN }}
+        aws-region: us-east-2
         
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -31,5 +32,5 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
-#    - name: Test
-#      run: dotnet test --no-restore --verbosity normal
+    - name: Test
+      run: dotnet test --no-restore --verbosity normal
