--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,13 +16,13 @@ jobs:
         dotnet: ['2.1', '3.1']
 
     steps:
-    - name: Super-Linter
-      uses: github/super-linter@v3.13.5 
+ #   - name: Super-Linter
+ #     uses: github/super-linter@v3.13.5 
     - uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS.SESSION.TOKEN }}
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-2
         
     - uses: actions/checkout@v2
