--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,8 +16,12 @@ jobs:
         dotnet: ['2.1', '3.1']
 
     steps:
- #   - name: Super-Linter
- #     uses: github/super-linter@v3.13.5 
+    - name: Super-Linter
+      uses: github/super-linter@v3.13.5
+      env:
+         VALIDATE_ALL_CODEBASE: false
+         DEFAULT_BRANCH: master
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
