--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,14 +13,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]       
-        dotnet: ['2.1', '3.1']
+        dotnet: ['2.x', '3.x']
 
     steps:
     - name: Super-Linter
       uses: github/super-linter@v3.13.5
       env:
-         VALIDATE_ALL_CODEBASE: false
-         DEFAULT_BRANCH: master
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: aws-actions/configure-aws-credentials@v1
       with:
