--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Super-Linter
       uses: github/super-linter@v3.13.5
       env:
+         DEFAULT_BRANCH: master
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - uses: aws-actions/configure-aws-credentials@v1
       with:
