--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]       
-        dotnet: ['2.1', '3.1']
+        dotnet: ['3.x']
 
     steps:
     - name: Super-Linter
