--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]       
-        dotnet: ['2.x', '3.x']
+        dotnet: ['2.1', '3.1']
 
     steps:
 #    - name: Super-Linter
@@ -26,7 +26,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        aws-region: us-east-2
+      #  aws-region: us-east-2
         
     - uses: actions/checkout@v2
     - name: Setup .NET Core
