--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 1
       matrix:
         os: [ubuntu-latest]       
-        dotnet: ['3.1', '2.1']
+        dotnet: ['netcoreapp2.1', 'netcoreapp3.1']
 
     steps:
 #    - name: Super-Linter
