--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -28,12 +28,36 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-2
-        
+    #######################################
+    
     - uses: actions/checkout@v2
-    - name: Setup .NET Core
+    - name: 🔨 Use .NET Core 2.1 SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: ${{ matrix.dotnet }}
+          dotnet-version: '2.1.x'
+    - name: 🔨 Use .NET Core 3.1 SDK
+      uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: '3.1.x'
+    - name: 🪓 **DOTNET HACK** 🪓
+      shell: pwsh
+      run: |
+          $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
+          $root = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Parent;
+          $directories = Get-ChildItem $root | Where-Object { $_.Name -ne $version };
+          foreach ($dir in $directories) {
+            $from = $dir.FullName;
+            $to = "$root/$version";
+            Write-Host Copying from $from to $to;
+            Copy-Item "$from\*" $to -Recurse -Force;
+          }
+    
+    #######################################
+#    - uses: actions/checkout@v2
+ #   - name: Setup .NET Core
+  #    uses: actions/setup-dotnet@v1
+   #   with:
+    #    dotnet-version: ${{ matrix.dotnet }}
     - name: Install dependencies
       run: dotnet restore
     - name: Build
