--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        os: [ubuntu-latest]       
+        os: [windows-latest]       
         dotnet: ['netcoreapp2.1', 'netcoreapp3.1']
 
     steps:
