--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -31,26 +31,14 @@ jobs:
     #######################################
     
     - uses: actions/checkout@v2
-    - name: 🔨 Use .NET Core 2.1 SDK
+    - name: Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
           dotnet-version: '2.1.x'
-    - name: 🔨 Use .NET Core 3.1 SDK
+    - name: Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
           dotnet-version: '3.1.x'
-    - name: 🪓 **DOTNET HACK** 🪓
-      shell: pwsh
-      run: |
-          $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
-          $root = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Parent;
-          $directories = Get-ChildItem $root | Where-Object { $_.Name -ne $version };
-          foreach ($dir in $directories) {
-            $from = $dir.FullName;
-            $to = "$root/$version";
-            Write-Host Copying from $from to $to;
-            Copy-Item "$from\*" $to -Recurse -Force;
-          }
     
     #######################################
 #    - uses: actions/checkout@v2
