--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -11,7 +11,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     strategy:
-      max-parallel: 1
+#      max-parallel: 1
       matrix:
         os: [windows-latest]       
   #      dotnet: ['netcoreapp2.1', 'netcoreapp3.1']
@@ -31,6 +31,10 @@ jobs:
     #######################################
     
     - uses: actions/checkout@v2
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+          dotnet-version: '2.0.x'
     - name: Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
