--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -14,7 +14,7 @@ jobs:
 #      max-parallel: 1
       matrix:
         os: [windows-latest]       
-  #      dotnet: ['netcoreapp2.1', 'netcoreapp3.1']
+        dotnet: ['netstandard2.0']
 
     steps:
 #    - name: Super-Linter
