--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,4 +1,4 @@
-name: CI
+name: dotnet Application
 
 on:
   push:
@@ -11,24 +11,22 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     strategy:
-#      max-parallel: 1
       matrix:
-        os: [windows-latest]       
-        dotnet: ['netstandard2.0']
+        os: [windows-latest]
 
     steps:
 #    - name: Super-Linter
- #     uses: github/super-linter@v3.13.5
-  #    env:
-   #      DEFAULT_BRANCH: master
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      uses: github/super-linter@v3.13.5
+#      env:
+#         DEFAULT_BRANCH: master
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-2
-    #######################################
     
     - uses: actions/checkout@v2
     - name: Setup dotnet
@@ -44,12 +42,6 @@ jobs:
       with:
           dotnet-version: '3.1.x'
     
-    #######################################
-#    - uses: actions/checkout@v2
- #   - name: Setup .NET Core
-  #    uses: actions/setup-dotnet@v1
-   #   with:
-    #    dotnet-version: ${{ matrix.dotnet }}
     - name: Install dependencies
       run: dotnet restore
     - name: Build
@@ -57,4 +49,4 @@ jobs:
     - name: Run Unit Test
       run: dotnet test Amazon.QLDB.Driver.Tests
     - name: Integration Test
-      run: dotnet test --no-restore --verbosity normal --settings Amazon.QLDB.Driver.IntegrationTests/.runsettings
+      run: dotnet test Amazon.QLDB.Driver.IntegrationTests --no-restore --verbosity normal --settings Amazon.QLDB.Driver.IntegrationTests/.runsettings
